<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="groupName"
            type="java.lang.String" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menu_general_margin"
            android:layout_marginEnd="@dimen/menu_general_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#" />

            <TextView
                android:id="@+id/tv_header_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@{groupName}"
                android:textSize="16sp"
                tools:text="group name"
                tools:textColor="@color/black"
                tools:textSize="16sp" />

            <ImageView
                android:id="@+id/fab_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="edit"
                android:scaleType="center"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/menu_general_margin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/iv_emergency_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/container_labels"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/menu_general_margin"
                android:weightSum="2"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/et_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:text="@string/tv_title_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/et_message_label"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end"
                    android:text="@string/tv_message_label"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/et_title_content"
                    android:inputType="text"
                    android:text="@string/et_title_content"
                    android:textColor="@color/black"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/etMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/et_message_content"
                    android:inputType="text"
                    android:text="@string/et_message_content"
                    android:textColor="@color/black"
                    tools:ignore="LabelFor" />

            </LinearLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/iv_emergency_call"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_iv_call_icon_idle"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/menu_general_margin"
            android:layout_marginBottom="@dimen/menu_general_margin"
            android:text="@string/tv_bottom_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>